--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,7 +17,7 @@
         <h5>Amount: <%=item.amount %></h5>
         <h5>Tags: <%=item.tags %></h5> 
         
-        <a href="/"><button>Return to Budget ALL</button></a>
+        <a href="/budget"><button>Return to Budget ALL</button></a>
     </div>
 </body>
 </html>
