--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,14 +14,15 @@
         <nav>
             <a href="/budget/new"><button>Create a New Item</button></a>
         </nav>
-        <h5>Bank Account: <% const bankAccount = allBudget.reduce(function(prev, cur) {
-            return prev + cur.amount
-          }, 0)  %> </h5>
-
-        
+        <h5><% let bankAccount = 0;
+            for (let i = 0; i< allBudget.length; i++)
+            {
+                bankAccount += parseInt(allBudget[i].amount)
+            }
+            console.log( "Bank Account Total: $", bankAccount);  %> </h5>
 
         <table><% for(let i = 0; i < allBudget.length; i++) { %>
-            <tr>g
+            <tr>
                 <td>
                     <%=allBudget[i].date %>
                 </td>
