--- a/views/new.ejs
+++ b/views/new.ejs
@@ -16,7 +16,7 @@
             <input type="text" name="name" placeholder="Name"><br>
             <input type="text" name="from" placeholder="From"><br>
             <input type="text" name="amount" placeholder="Amount"><br>
-            <input type="text" name="tags[]" placeholder="Tags" /><br>
+            <input type="text" name="tags[][]" placeholder="Tags" /><br>
 
             <input type="submit" value="Create Item">
         </form>
